[package]
name = "tls_showcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"] }
webpki = "0.22.0"
webpki-roots = "0.23.1"
